@@ -10,7 +10,9 @@ import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.SecureRandom;
 import java.security.Security;
+import java.util.Random;
 
+import javax.crypto.AEADBadTagException;
 import javax.crypto.BadPaddingException;
 import javax.crypto.CipherInputStream;
 import javax.crypto.CipherOutputStream;
@@ -19,10 +21,13 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
 
 import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.commons.io.IOUtils;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.junit.Assert;
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 
 public class AESTest {
 	protected SecretKey key;
@@ -44,11 +49,11 @@ public class AESTest {
 	
 	public static final String SHORT_STR = "啊呀";
 	public static final String [] TRANSFORMATIONS = {
-			"AES/ECB/NoPadding", "AES/ECB/PKCS5Padding", "AES/ECB/PKCS7Padding", "AES/ECB/ISO10126Padding",
-			"AES/CBC/NoPadding", "AES/CBC/PKCS5Padding", "AES/CBC/PKCS7Padding", "AES/CBC/ISO10126Padding",
-			"AES/CFB/NoPadding", "AES/CFB/PKCS5Padding", "AES/CFB/PKCS7Padding", "AES/CFB/ISO10126Padding",
-			"AES/OFB/NoPadding", "AES/OFB/PKCS5Padding", "AES/OFB/PKCS7Padding", "AES/OFB/ISO10126Padding",
-			"AES/CTR/NoPadding", "AES/CTR/PKCS5Padding", "AES/CTR/PKCS7Padding", "AES/CTR/ISO10126Padding"
+			"AES/ECB/NoPadding", "AES/ECB/ZeroBytePadding", "AES/ECB/PKCS5Padding", "AES/ECB/PKCS7Padding", "AES/ECB/ISO10126Padding",
+			"AES/CBC/NoPadding", "AES/ECB/ZeroBytePadding", "AES/CBC/PKCS5Padding", "AES/CBC/PKCS7Padding", "AES/CBC/ISO10126Padding",
+			"AES/CFB/NoPadding", "AES/ECB/ZeroBytePadding", "AES/CFB/PKCS5Padding", "AES/CFB/PKCS7Padding", "AES/CFB/ISO10126Padding",
+			"AES/OFB/NoPadding", "AES/ECB/ZeroBytePadding", "AES/OFB/PKCS5Padding", "AES/OFB/PKCS7Padding", "AES/OFB/ISO10126Padding",
+			"AES/CTR/NoPadding", "AES/ECB/ZeroBytePadding", "AES/CTR/PKCS5Padding", "AES/CTR/PKCS7Padding", "AES/CTR/ISO10126Padding"
 	};
 	
 	@Before
@@ -57,6 +62,20 @@ public class AESTest {
 		this.key = AESFunctions.generateSecretKey(256);
 	}
 	
+	/**
+	 * 测试各种工作模式和补齐的组合，没有初始向量的情况。
+	 * 
+	 * @throws UnsupportedEncodingException
+	 * @throws InvalidKeyException
+	 * @throws NoSuchAlgorithmException
+	 * @throws NoSuchProviderException
+	 * @throws NoSuchPaddingException
+	 * @throws IllegalBlockSizeException
+	 * @throws BadPaddingException
+	 * 
+	 * EBC和CBC模式都必须要有补齐方式，PKCS7Padding或ISO10126Padding，否则会报错。
+	 * 
+	 */
 	@Test
 	public void testBlock1() throws UnsupportedEncodingException, InvalidKeyException, NoSuchAlgorithmException, NoSuchProviderException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException {
 		byte[] longPlain = LONG_STR.getBytes("UTF-8");
@@ -88,6 +107,23 @@ public class AESTest {
 		}
 	}
 	
+
+	/**
+	 * 测试各种工作模式和补齐的组合，有初始向量的情况。
+	 * 
+	 * @throws UnsupportedEncodingException
+	 * @throws InvalidKeyException
+	 * @throws NoSuchAlgorithmException
+	 * @throws NoSuchProviderException
+	 * @throws NoSuchPaddingException
+	 * @throws IllegalBlockSizeException
+	 * @throws BadPaddingException
+	 * 
+	 * EBC模式不接受初始向量，否则会报错。
+	 * CBC模式都须要有补齐方式，PKCS7Padding或ISO10126Padding，否则会报错。
+	 * CBC/CFB/OFB/CTR模式都要有初始向量，否则会报错。
+	 * 
+	 */
 	@Test
 	public void testBlock2() throws UnsupportedEncodingException, InvalidKeyException, NoSuchAlgorithmException, NoSuchProviderException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException {
 		byte[] longPlain = LONG_STR.getBytes("UTF-8");
@@ -120,7 +156,7 @@ public class AESTest {
 	}
 	
 	/**
-	 * 测试几种padding的实际实现，发现PKCS5Padding和PKCS7Padding结果是一样的。
+	 * 测试几种padding的兼容程度。
 	 * 
 	 * @throws UnsupportedEncodingException
 	 * @throws NoSuchAlgorithmException
@@ -129,6 +165,8 @@ public class AESTest {
 	 * @throws NoSuchPaddingException
 	 * @throws BadPaddingException
 	 * @throws InvalidAlgorithmParameterException
+	 * 
+	 * 发现PKCS5Padding和PKCS7Padding结果是一样的。
 	 */
 	@Test
 	public void testPadding() 
@@ -157,6 +195,19 @@ public class AESTest {
 		}
 	}
 	
+	/**
+	 * 流模式加解密测试
+	 * 
+	 * @param mode 工作模式
+	 * @param padding 补齐模式
+	 * @return 测试结果
+	 * @throws NoSuchAlgorithmException
+	 * @throws InvalidKeyException
+	 * @throws InvalidAlgorithmParameterException
+	 * @throws NoSuchProviderException
+	 * @throws NoSuchPaddingException
+	 * @throws IOException
+	 */
 	protected boolean testSingleStream(String mode, String padding) 
 			throws NoSuchAlgorithmException, InvalidKeyException, InvalidAlgorithmParameterException, 
 			NoSuchProviderException, NoSuchPaddingException, IOException {
@@ -174,14 +225,14 @@ public class AESTest {
 		ByteArrayInputStream bis = new ByteArrayInputStream(bos.toByteArray());
 		CipherInputStream cis = AESFunctions.createDecryptStream(this.key, trans, iv, bis);
 		
-		byte[] decrypted = cis.readAllBytes();
+		byte[] decrypted = IOUtils.toByteArray(cis);
 		return LONG_STR.equals(new String(decrypted, "UTF-8"));
 	}
 	
 	/**
 	 * 测试流模式加解密。
 	 * 
-	 * 证明CBC工作模式不适合流加解密。
+	 * CBC模式在NoPadding的时候会出现结尾丢失的情况，出现解密错误。
 	 * 
 	 */
 	@Test
@@ -207,6 +258,18 @@ public class AESTest {
 		}
 	}
 	
+	/**
+	 * 测试AES-GCM正常加解密的情况
+	 * 
+	 * @throws NoSuchAlgorithmException
+	 * @throws UnsupportedEncodingException
+	 * @throws InvalidKeyException
+	 * @throws IllegalBlockSizeException
+	 * @throws BadPaddingException
+	 * @throws InvalidAlgorithmParameterException
+	 * @throws NoSuchProviderException
+	 * @throws NoSuchPaddingException
+	 */
 	@Test
 	public void testGcm() 
 			throws NoSuchAlgorithmException, UnsupportedEncodingException, 
@@ -216,17 +279,57 @@ public class AESTest {
 		byte [] associated  = "将进酒 唐·李白".getBytes("UTF-8");
 		byte [] plaintext = LONG_STR.getBytes("UTF-8");
 		
+		// 几种iv长度，其中只有12是推荐值
 		for(int i : new int []{8, 12, 16, 24, 32}) {
+			// 可以允许的tag长度，其中128是推荐值
 			for(int t : new int[] {128, 120, 112, 104, 96, 64, 32}) {
+				// 随机初始化指定长度的iv
 				byte [] iv = new byte[i];
 				random.nextBytes(iv);
 	
+				// 加密
 				byte [] ciphertext = AESFunctions.encryptGcm(this.key, iv, associated, t, plaintext);
+				// 解密
 				byte [] decrypted = AESFunctions.decryptGcm(this.key, iv, associated, t, ciphertext);
 				
+				// 判断加解密结果
 				Assert.assertEquals(LONG_STR, new String(decrypted, "UTF-8"));
 			}
 		}
+	}
+	
+	
+	@Rule
+	public ExpectedException expected = ExpectedException.none();
+	/**
+	 * 测试AES-GCM非正常验证的情况
+	 * 
+	 * @throws NoSuchAlgorithmException
+	 * @throws UnsupportedEncodingException
+	 * @throws InvalidKeyException
+	 * @throws IllegalBlockSizeException
+	 * @throws BadPaddingException
+	 * @throws InvalidAlgorithmParameterException
+	 * @throws NoSuchProviderException
+	 * @throws NoSuchPaddingException
+	 */
+	@Test
+	public void testErroneousGcm() 
+			throws NoSuchAlgorithmException, UnsupportedEncodingException, 
+			InvalidKeyException, IllegalBlockSizeException, BadPaddingException, 
+			InvalidAlgorithmParameterException, NoSuchProviderException, NoSuchPaddingException {
+		byte [] associated  = "将进酒 唐·李白".getBytes("UTF-8");
+		byte [] plaintext = LONG_STR.getBytes("UTF-8");		
+		byte [] iv = AESFunctions.generateGcmIv();
+		byte [] ciphertext = AESFunctions.encryptGcm(this.key, iv, associated, plaintext);
+		
+		expected.expect(AEADBadTagException.class);
+		expected.expectMessage("mac check in GCM failed");
+		
+		ciphertext[new Random().nextInt(ciphertext.length)] ^= (byte)0xFF;
+		byte [] decrypted = AESFunctions.decryptGcm(this.key, iv, associated, ciphertext);
+		
+		Assert.assertEquals(LONG_STR, new String(decrypted, "UTF-8"));		
 	}
 
 }
